# university-archive

./: .gitignore  README.md
2019-hs-schoolbuddy/: .gitignore  README.md  SchoolBuddy.sln
2020-hs-schoollink/: .gitignore
2021-hs-git-good-at-git/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
2021-hs-lcg-toolkit/: README.md  lcg.py  mersennetwister.py
2021-hs-radio-sc/: db.sqlite3
2021-lcg-toolkit/: .gitignore
2022-cgra151-assignment-1/: sketch(1).properties  sketch.properties
2022-cgra151-assignment-3/: Assignment_3.pde  Background.pde  CompositeSpriteMap.pde  Input.pde  SpriteMap2D.pde
2022-cgra151-game-project/: AbstractEntities.pde  CollectGame.pde  Collision.pde  DynamicMap.pde  FaceOffGame.pde  InterfaceGames.pde  PlayerAndInput.pde  Project.pde  RaceGame.pde  WorldAndTextures.pde
2022-comp102-assignment-4/: test.txt
2022-comp102-assignment-5/: test
2022-comp102-assignment-6/: BallGame.java  Box.java  GameObject.java  PhysicsObject.java  Shelf.java
2022-engr101-avc-project-team34/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  INSTALL.md  ProgressReport.md  Project 3.kdev4  README.md  Team34Avc.geany  build-clang.sh  camera.hpp  display.html  display_camera.html  display_scene.html  main.cpp  move_control.cpp  path_algorithm.cpp  robot_controller.cpp
2022-engr101-avc-project-team34/lib/: images.h  robot.h
2022-engr101-avc-project-team34/planning/: uml_diagram.xmi
2023-nwen241-assignment-4/: CMakeLists.txt  abstractdb.cpp  abstractdb.hpp  t3test.cpp  t4test.cpp  vectordb.cpp  vectordb.hpp
(+737 files in other folders)
